<resources>
    <string name="ok">OK</string>
    <string name="app_name">Medi App</string>
    <string name="title_home">Home</string>
    <string name="profile_bio">Bio</string>
    <string name="profile_age">Age</string>
    <string name="profile_first_name">First Name</string>
    <string name="profile_surname">Surname</string>
    <string name="profile_dob">Date of Birth</string>
    <string name="title_user_detail">User Profile</string>
    <string name="title_medicine_list">Medicine Search</string>
    <string name="button_update_profile">Update Profile</string>
    <string name="button_edit_profile">Edit Your Profile</string>
    <string name="your_profile_medicines">Your Medicines</string>
    <string name="view_profile_medicines">View Your Medicines</string>
    <string name="button_search_medicines">Search For Medicines</string>
    <string name="button_add_medicine">Add Medicine to Profile</string>
    <string name="medicine_added">%1$s Added</string>
    <string name="button_medicine_conflict">Add Medicine to Profile (Potential Conflict Detected!)</string>
    <string name="welcome">Welcome to MediApp</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Ocr Detector Sample</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>
    <string name="medicine_search_info_title">"Medicine Search"</string>
    <string name="medicine_search_info_message">"Perform a search for medicine in our database"</string>
    <string name="camera_info_title">"Camera Search"</string>
    <string name="camera_use">"Use Your Camera To Search"</string>
    <string name="camera_info_message">"Use the camera to scan text to search for medicines"</string>
    <string name="date_added">"Added on "</string>
    <string name="date_added_alt">"Added on %1$s"</string>
    <string name="loading">"Loading Medicine"</string>
    <string name="loading_many">"Loading Medicines"</string>
    <string name="loading_sign_in">"Signing you in"</string>
    <string name="logged_in">"Logged in successfully"</string>
    <string name="log_out">"Log Out"</string>
    <string name="no_results">"No results for %1$s"</string>
    <string name="no_medicines">"You have no medicines"</string>
    <string name="medicine_name">"%1$s"</string>
    <string name="back_to_results">Back to results</string>
    <string name="more_options">More options</string>
    <string name="sort_name">Sort by name</string>
    <string name="sort_date">Sort by date</string>
    <string name="sort_type">Sort by type</string>
    <string name="bar_help">Help</string>
    <string name="bar_main_help_title">MediApp Home</string>
    <string name="bar_main_help_message">From here you can visit many other features of the app. Try using the sidebar to access your profile and search for new medicines.</string>
    <string name="bar_edit_profile_help_title">Edit Profile</string>
    <string name="bar_edit_profile_help_message">Here you can optionally add some basic information to your profile.</string>
    <string name="bar_camera_help_title">Camera Search</string>
    <string name="bar_camera_help_message">Use your device\'s camera to scan text. You can tap on the detected text to search for medicines using that text as a search term.</string>
    <string name="bar_profile_medicines_help_title">Your Medicines</string>
    <string name="bar_profile_medicines_help_message">Here you can find any medicines you have added to your profile. Swipe to delete medicines in a flash! Potential medicine conflicts are displayed on tap. You can also sort the list by name, type or date using the \'More Options\' menu.</string>
    <string name="bar_medicine_search_help_title">Medicine Search Results</string>
    <string name="bar_medicine_search_help_message">Your search results will appear here. If you want to search again, just tap on the Search icon and enter your term. Results can also be sorted by name or type.</string>
    <string name="bar_medicine_info_help_title">%1$s Information</string>
    <string name="bar_medicine_info_help_message">Here you will find information about %1$s. You can add %1$s to your profile at any time by selecting \'Add Medicine to Profile\'. Select the speaker icon to hear more about %1$s.</string>
    <string name="conflicts">Conflicts</string>
    <string name="conflict_detected">There may be a conflict between %1$s and a medicine in your profile. Do you still want to add %1$s?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_medicine">Delete %1$s?</string>


</resources>