<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_back"
        android:icon="@drawable/ic_action_back"
        android:title="@string/back_to_results"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_action_help"
        android:title="@string/bar_help"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/button_search_medicines"
        app:showAsAction="always" />


    <!-- Settings, always in the overflow -->
    <item
        android:id="@+id/log_out"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/log_out"
        app:showAsAction="never" />

</menu>